# WtafipoConsole

./: README.md
console/DockerSetup/: Dockerfile  cont.txt  fcopy.bat  fcopyf.bat  my_program.uf2  notes.txt  runDocker.bat  testing.html
console/DockerSetup/project/: CMakeLists.txt  DPRAMmemory.h  SpiHelper.h  boardLED.h  build.sh  characterFont.h  colours.h  d.h  main.c  memmap_custom.ld  screen.h
console/SECRET/: post2.txt
console/kicadPorj/PicoConsole/: #auto_saved_files#  PicoConsole-B_Cu.gbl  PicoConsole-B_Cu.gbr  PicoConsole-B_Mask.gbr  PicoConsole-B_Mask.gbs  PicoConsole-B_Paste.gbp  PicoConsole-B_Paste.gbr  PicoConsole-B_Silkscreen.gbo  PicoConsole-B_Silkscreen.gbr  PicoConsole-Edge_Cuts.gbr  PicoConsole-Edge_Cuts.gm1  PicoConsole-F_Cu.gbr  PicoConsole-F_Cu.gtl  PicoConsole-F_Mask.gbr  PicoConsole-F_Mask.gts  PicoConsole-F_Paste.gbr  PicoConsole-F_Paste.gtp  PicoConsole-F_Silkscreen.gbr  PicoConsole-F_Silkscreen.gto  PicoConsole-NPTH.drl  PicoConsole-PTH.drl  PicoConsole-job.gbrjob  PicoConsole.kicad_pcb  PicoConsole.kicad_prl  PicoConsole.kicad_pro  PicoConsole.kicad_sch  _autosave-PicoConsole.kicad_pcb  _autosave-PicoConsole.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~PicoConsole.kicad_pcb.lck  ~PicoConsole.kicad_sch.lck  ~_autosave-PicoConsole.kicad_pcb.lck
console/kicadPorj/PicoConsole/MyLibrary.pretty/: Untitled.kicad_mod  Untitled_1.kicad_mod  Untitled_2.kicad_mod  Untitled_3.kicad_mod  drilledHole.kicad_mod
console/kicadPorj/PicoConsole/Output/: Output.7z  PicoConsole-B_Cu.gbl  (+11 more)
console/kicadPorj/lib/: CompLib.bak  CompLib.kicad_sym
(+2 files in other folders)
